--- a/pages/Mc14.md
+++ b/pages/Mc14.md
@@ -1,95 +1,201 @@
 ---
 layout: page
-title: Mc13
+title: Mc14
 ---
 
-La fine del mondo
------------------
+Il profumo
+----------
 
-1-2 Mentre Gesù usciva dal
-[Tempio](../master/mappa.txt "il Tempio di Gerusalemme; mappa: Tempio"),
-uno dei suoi allievi esclamò: “Professore, guarda che pietre enormi e
-che costruzioni meravigliose!” Gesù gli rispose: “Vedi come sono grandi?
-Sappi che di queste pietre non ne rimarrà una sola sull’altra: verranno
-buttate giù tutte!”
+1-2 Due giorni prima della
+[Pasqua](../master/glossario.txt "glossario: Pasqua") ebraica, durante
+la quale non si mangia pane lievitato, i capi sacerdoti e i [professori
+di Mosè](../master/glossario.txt "glossario: legge di Mosè") studiavano
+una trappola per arrestare Gesù, per poi ucciderlo. Dicevano: “Ma non
+possiamo farlo durante la Pasqua: rischiamo una rivolta popolare!”
 
-3-4 Più tardi, quando si trovava sul colle degli Ulivi, di fronte al
-Tempio, Pietro, Giacomo, Giovanni e Andrea, in privato, gli chiesero:
-“Quando succederanno queste cose? Da cosa capiremo che siamo vicini?”
+3-9 Gesù, nel frattempo, era a Betània, nella casa di Simone, il
+lebbroso. Mentre erano a tavola, entrò una donna con una boccetta di
+alabastro contenente un profumo costoso di nardo puro, aprì[^20] la
+boccetta e versò il profumo sulla testa di Gesù. Alcuni di quelli che
+mangiavano con loro ci rimasero male e commentarono: “Ma che spreco!
+Quel profumo si poteva vendere per più di un anno di stipendio [^21] e
+dare il ricavato ai poveri!” e la rimproveravano. Gesù replicò:
+“Lasciatela in pace! Perché la criticate per un bel gesto che ha fatto a
+me? I poveri li trovate sempre, e potete aiutarli quando volete, ma io,
+tra un po’, me ne vado! Lei ha fatto quello che poteva: ha profumato il
+mio corpo, anticipando la mia sepoltura[^22]. E aggiungo questo:
+dovunque nel mondo porteranno il mio messaggio, verrà ricordato anche
+quello che ha fatto questa donna.”
 
-5-8 Allora Gesù cominciò a spiegare: “Non fatevi ingannare da nessuno!
-Molti si presenteranno a nome mio, diranno di essere il Protagonista e
-inganneranno tanta gente. Quando sentirete parlare di guerre vicine o
-lontane, non spaventatevi, sono cose che devono succedere, ma non sarà
-ancora la fine. Nazioni e governi si faranno la guerra; in molti paesi
-ci saranno terremoti e carestie. Queste cose saranno solo l’inizio della
-sofferenza.
+L’ultima cena
+-------------
 
-9-11 Fate attenzione, perché sarete trascinati in tribunale e picchiati
-nei luoghi di culto. Sarete accusati, per colpa mia, davanti a re e capi
-di governo, e così sarete miei testimoni. Ma, prima di tutto questo, [il mio
-messaggio](../master/glossario.txt "glossario: vangelo") deve essere
-annunciato in tutte le nazioni. E quando vi arresteranno per portarvi in tribunale, non preoccupatevi di
-preparavi il discorso: dite solo quello che Dio vi suggerirà in quel
-momento, perché non sarete voi a parlare, ma Spirito di Dio.
+10-11 Giuda Iscariota, uno degli allievi, andò dai capi sacerdoti per
+mettersi d’accordo e tradire Gesù. Quando i capi sacerdoti capirono il
+motivo della sua visita, furono molto contenti e gli promisero una
+ricompensa. Così Giuda cominciò a cercare un’occasione per consegnare
+Gesù nelle loro mani.
 
-12-13 Il fratello tradirà a morte il proprio fratello, i padri
-tradiranno i propri figli, e i figli si ribelleranno ai genitori
-causando la loro morte. E tutti vi odieranno, perché siete miei. Ma
-tutti quelli che resisteranno fino alla fine saranno salvati.
+12-15 Il primo giorno della Pasqua ebraica, quando gli Ebrei ammazzano
+ritualmente [^23] gli agnelli, gli allievi chiesero a Gesù dove volesse
+mangiare la tradizionale cena di Pasqua. Gesù inviò due di loro a
+Gerusalemme con queste istruzioni: “Quando vedrete un signore con una
+brocca d’acqua che vi viene incontro, seguitelo fino alla casa dove
+entra, e poi dite al padrone:”Il nostro Professore ci manda a chiedere:
+“In che stanza posso fare la cena di Pasqua con i miei allievi?”. Lui vi
+porterà in una grande sala al piano di sopra, già sistemata: preparate
+la nostra cena lì“.
 
-14-16 Quando vedrete “La Bestia Infame” nel posto in cui mai dovrebbe
-stare (chi legge cerchi di capire!), allora quelli che si trovano in
-[Giudea](../master/mappa.txt "mappa: Giudea") scappino in collina. Se vi
-trovate sulla terrazza, non scendete giù in casa per prendere qualcosa.
-Se siete fuori nei campi, non tornate indietro, nemmeno per prendere i
-vestiti!
+16-18 Gli allievi andarono in città, trovarono tutto come Gesù aveva
+detto e prepararono la cena. Verso sera, poi, arrivarono Gesù e i
+dodici. Mentre mangiavano, Gesù disse: “Sappiate che uno di voi mi
+tradirà, uno che mangia con me”.
 
-17-20 “Sarà un disastro per le donne incinte in quei giorni, e per le
-madri che allattano! E pregate che la vostra fuga non capiti d’inverno,
-perché quello sarà un periodo talmente spaventoso, che non se ne ricorda
-uno simile dai tempi della creazione, né ce ne sarà un’altro dopo! E se
-il Capo non accorciasse quel tempo, nessuno si salverebbe. Ma Dio lo ha
-abbreviato per amore di quelli che ha scelto.
+19-21 I discepoli ci rimasero malissimo e uno dopo l’altro gli
+chiedevano: “Sarò mica io?” Gesù rispose: “È uno di voi dodici, quello
+che sta mangiando con me. Io devo morire, come hanno predetto i profeti
+nella Bibbia, ma guai a quello che mi tradirà! Sarebbe meglio che non
+fosse mai nato!”
 
-21-23 “E in quel periodo, se qualcuno vi dice:”Il Protagonista è qui!"
-oppure “Eccolo lì!”, non vi fidate! Perché si presenteranno molti falsi
-inviati di Dio e falsi profeti che faranno miracoli incredibili per
-ingannare perfino quelli scelti da Dio, se fosse possibile. Ma voi,
-state attenti! Vi ho avvertito per tempo!
+22 Mentre stavano mangiando, Gesù prese un pane, ringraziò Dio, poi lo
+spezzò e lo diede agli allievi, dicendo: “Mangiate, questo è il mio
+corpo”.
 
-Il ritorno di Gesù
-------------------
+23-25 Poi prese un bicchiere di vino, ringraziò Dio, lo passò agli
+allievi e tutti ne bevvero. Disse: “Questo è il mio sangue, versato per
+molti, il sangue del nuovo patto. Ascoltatemi bene: io non berrò più
+vino fino a quando berrò quello nuovo sotto il governo di Dio!”
 
-24-25 “Nel periodo di quelle difficoltà,”il sole si oscurerà e la luna
-non splenderà più, le stelle cadranno dal cielo e i governatori del
-cielo verranno sconvolti“. [^19]
+26-28 Dopo aver cantato un inno della Pasqua, uscirono e si diressero
+sul Monte degli Ulivi. Gesù disse ai discepoli: “Voi mi abbandonerete
+tutti, perché, tramite i profeti, Dio ha detto: *“Ucciderò il Pastore, e
+le pecore saranno disperse!”* [^24] Ma quando tornerò in vita, andrò in
+Galilea, e ci rivedremo lì!”
 
-26-27 “Sarà allora che tutta l’umanità vedrà il
-[Protagonista](../master/glossario.txt "glossario: Messia"), venire
-dalle nuvole con grande potenza e splendore. Manderà gli angeli in tutte
-le direzioni a radunare quelli che ha scelto, dai confini estremi della
-terra e del cielo.”
+29-31 Allora Pietro gli disse: “Io non ti abbandonerò mai! Non importa
+quello che fanno gli altri!” Ma Gesù rispose: “Pietro, io invece ti dico
+che domani mattina, prima che il gallo canti due volte, avrai già detto
+tre volte che non mi conosci”. “Ma no!” esclamò Pietro. “Neanche se
+dovessi morire con te! Non ti rinnegherò mai!” E gli altri allievi
+dicevano lo stesso.
 
-28-31 “Ecco una lezione da imparare dall’albero di fichi: quando i suoi
-rami diventano teneri e spuntano le prime foglie, voi sapete che sta
-arrivando l’estate : allo stesso modo, quando vedrete succedere queste
-cose che vi ho raccontato, potete stare sicuri che sto per ritornare, a
-brevissimo. Infatti questa generazione non morirà prima che siano
-successe tutte queste cose. Il cielo e la terra scompariranno, ma le mie
-parole rimangono per sempre.”
+Gesù arrestato
+--------------
 
-32-33 “Però nessuno sa quando verrà quel giorno e quell’ora, non lo
-sanno gli angeli di Dio e neanche io. Solo Dio Padre lo sa. E visto che
-non sapete quando sarà quel momento, state svegli e attenti!”
+32 Erano arrivati intanto in un uliveto, detto Getsèmani. Gesù ordinò ai
+suoi allievi: “State seduti quì, che vado a pregare”.
 
-34-37 “E’ come quando un padrone di casa parte per un viaggio: assegna a
-ciascun dipendente i compiti da svolgere durante la sua assenza e dice
-al portinaio di stare di guardia. Quindi, tenete gli occhi ben aperti,
-perché non sapete quando tornerà il padrone, se di sera, a mezzanotte,
-prima dell’alba o di mattina presto. E se ritorna all’improvviso, non
-fatevi trovare addormentati! Mi raccomando, con voi e con tutti: fatevi
-trovare pronti!”
+33-35 Si portò Pietro, Giacomo e Giovanni e cominciò a sentirsi ansioso
+e profondamente angosciato. E Gesù disse: “Mi sento oppresso da una
+tristezza mortale: state svegli quì vicino a me”. Andò un po’ più
+avanti, poi cadde a terra, pregando Dio che, se possibile, gli
+risparmiasse il momento terribile che lo aspettava.
+
+36-38 “Papà, Padre mio” diceva, “tutto ti è possibile. Allontana da me
+questo dolore! Però, sia fatto come vuoi tu, non come vorrei io.” Poi
+tornò dai tre discepoli e li trovò addormentati. “Simone!” chiamò, “Che
+fai, dormi? Non sei riuscito a stare sveglio nemmeno un’ora con me?”
+State svegli e pregate di non cadere in tentazione, perchè, anche se lo
+spirito è volenteroso, il fisico è debole!"
+
+39-40 Gesù si allontanò di nuovo e pregò, ripetendo le stesse parole.
+Poi, tornò dagli allievi e di nuovo li trovò addormentati. Non erano
+riusciti a tenere gli occhi aperti e non sapevano cosa rispondergli.
+
+41-42 La terza volta che tornò da loro, disse: “Ancora dormite? È
+finita: è venuto il momento in cui devo essere tradito e consegnato a
+gente senza Dio. Alzatevi! Dobbiamo andare! Guardate, sta arrivando
+l’uomo che mi tradisce!”
+
+43 Stava ancora parlando, che arrivò Giuda, uno dei dodici, accompagnato
+da una banda armata di spade e bastoni, inviata dai sommi sacerdoti e
+dagli altri capi ebrei.
+
+44-47 Giuda aveva stabilito con loro un segnale: “Quello che bacerò è
+lui. Prendetelo e portatelo via!” Così, appena arrivati, Giuda si
+avvicinò a Gesù e lo chiamò: “Professore!”, poi lo baciò. Allora gli
+altri gli si buttarono addosso e lo immobilizzarono. Ma qualcuno sfoderò
+una spada e ferì un servo del Sacerdote Capo, tagliandogli un orecchio.
+
+48-50 Gesù chiese: “Sono un criminale talmente pericoloso che mi venite
+a prendere con spade e bastoni? Perché non mi avete arrestato nel
+Tempio? Ero lì con voi ogni giorno ad insegnare. Ma queste cose
+succedono in modo che si avverino le profezie che mi riguardano.” A quel
+punto, gli allievi scapparono e lo abbandonarono.
+
+51-52 Stava seguendo Gesù anche un ragazzo coperto soltanto da una
+specie di lenzuolo. Quando cercarono di prenderlo, lasciò cadere il
+lenzuolo e scappò tutto nudo.
+
+Il processo
+-----------
+
+53 Gesù fu portato dal [Sacerdote Capo][], dove si riunirono tutti i
+capi sacerdoti e gli altri capi religiosi.
+
+54 Pietro, che lo seguiva a distanza, era entrato nel cortile del
+Sacerdote Capo e andò a sedersi fra i servi che si scaldavano intorno al
+fuoco.
+
+55-56 Intanto, i capi dei sacerdoti e la Corte Suprema ebraica al
+completo stavano cercando un’accusa contro Gesù per poterlo condannare a
+morte, ma non ne trovavano. Molti testimoni portavano false
+testimonianze, ma si contraddicevano a vicenda.
+
+57-58 Alla fine, si alzarono alcuni signori, cercando di accusare
+falsamente Gesù. Dissero: “Abbiamo sentito che diceva: Distruggerò questo
+Tempio costruito dagli uomini e in tre giorni ne costruirò un altro,
+fatto senza intervento umano.” Ma neanche su questo punto erano
+d’accordo.
+
+60-62 Allora il Sacerdote Capo si alzò e, davanti al tribunale, chiese a
+Gesù: “Perché non rispondi a questa accusa? Cosa rispondi in tua
+difesa?” Gesù non rispondeva, allora il Sacerdote Capo chiese: “Sei tu
+il [Liberatore degli Ebrei][], Figlio di Dio?” Gesù rispose: “Sì, sono
+io. E voi vedrete Dio Uomo seduto vicino a Dio e ritornare fra le nuvole
+del cielo!”
+
+63-64 Il Sacerdote Capo si strappò i vestiti, gridando: “Che bisogno c’è
+di altri testimoni? Tutti quanti avete ascoltato la sua bestemmia! Come
+lo giudicate?” Tutti votarono per la condanna.
+
+65 Alcuni di loro gli sputavano addosso, poi lo bendarono e cominciarono
+a colpirlo e a prenderlo in giro, dicendo: “Ci fai una profezia?”. Anche
+le guardie lo picchiavano.
+
+Pietro disconosce Gesù
+----------------------
+
+66-68 Nel frattempo, Pietro era rimasto sotto, nel cortile. Una delle
+serve del Sacerdote Capo, arrivò e lo vide scaldarsi vicino al fuoco; lo
+osservò e disse: “Anche tu eri con Gesù di [Nazarèt][]! Pietro negò:”Non
+so neanche cosa stai dicendo!” disse, allontanandosi verso il cortile.
+(In quel momento il gallo cantò.)
+
+69-71 Guardandolo, la serva cominciò a ripetere agli altri: “Quello lì è
+uno di loro!” Pietro negò di nuovo. Poco dopo, altre persone lì attorno
+cominciarono a dire a Pietro: “Sì che sei uno di loro, perché vieni
+dalla [Galilea][]!” Pietro iniziò a giurare e spergiurare, dicendo: “Non
+lo conosco nemmeno, questo personaggio di cui parlate!”
+
+72 Il gallo cantò per la seconda volta e improvvisamente Pietro ricordò
+le parole di Gesù: “Prima che il gallo canti due volte, avrai già detto
+tre volte che non mi conosci”. E Pietro, ripensandoci, pianse.
 
 
-[^19]: Ger 30:7; Dan 12:1; Gioele 2:2; Is. 13:10; 34:4
+[^20]: si trattava di flaconi o bottigliette sigillate: l’apertura più
+    semplice era la rottura
+
+[^21]: trecento monete d’argento o denarii, più di un anno di stipendio
+
+[^22]: i riti della sepoltura dell’epoca prevedevano la profumazione del
+    cadavere, per chi ne aveva le possibilità
+
+[^23]: l’agnello di Pasqua deve essere sacrificato a Dio, secondo le
+    regole della Pasqua ebraica
+
+[^24]: vedi Zac 13:7
+[Sacerdote Capo]: ../master/glossario.txt "glossario: Sacerdote Capo"
+[Liberatore degli Ebrei]: ../master/glossario.txt "glossario: Messia"
+[Nazarèt]: ../master/mappa.txt "mappa: Nazarèt"
+[Galilea]: ../master/mappa.txt "mappa: Galilea"
